[project]
name = "suppress-unhandled"
version = "0.1.1"
requires-python = ">= 3.10"
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/petersuttondev/suppress-unhandled"

[dependency-groups]
dev = ["build", "cleek", "pytest", "twine"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
